# tmbot

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
macros/: Cargo.toml
macros/src/: lib.rs
public_html/: index.css  index.html
src/: comm.rs  db.rs  json.rs  lib.rs  log.rs  main.rs  serror.rs  srvs.rs  tmlog.rs  util.rs
