[package]
name = "tmbot"
version = "0.1.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

[profile.dev]
opt-level = 1
lto = "off"

[dependencies]
log = "*"
env_logger = "*"
regex = "*"
tokio = { version = "0.2", features = ["full"] }
actix = "0.10"
actix-tls = "2.*"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "3"
actix-http = "2.2.1"
openssl = { version = "0.10" }
serde_json = "*"
#serde_urlencoded = "*"
sqlite = "*"
datetime = "*"
awc = "*"
rand = "*"
futures = "*"
