[package]
name = "tmbot"
version = "0.2.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

[profile.dev]
opt-level = 1
lto = "off"

[dependencies]
log = "*"
env_logger = "*"
rand = "*"
datetime = "*"
regex = "*"
serde_json = "*"
sqlite = "*"
openssl = "*"
actix = "*"
awc = { version = "*", features = ["openssl"] }
actix-web = { version = "*", features = ["openssl"] }
actix-web-actors = "*"
percent-encoding = "*"
